[tool.poetry]
name = "kgcode-tab"
version = "1.0.0"
description = "Matching Tabular Data to Knowledge Graph."
authors = ["Xinhe Li <lixinhe669@gmail.com>", "QuadnucYard <quadnucyard@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
beautifulsoup4 = "^4.12.2"
colorlog = "^6.7.0"
dataclasses-json = "^0.6.1"
jinja2 = "^3.1.2"
lxml = "^4.9.3"
more-itertools = "^10.1.0"
numpy = "^1.26.1"
orjson = "^3.9.10"
ormsgpack = "^1.3.0"
pandas = "^2.1.2"
plotly = "^5.18.0"
polars = "^0.19.12"
pyarrow = "^13.0.0"
rapidfuzz = "^3.4.0"
requests = "^2.31.0"
requests-html2 = "^2.0.3"
sparqlwrapper = "^2.0.0"
sqlite-utils = "^3.35.1"
tqdm = "^4.66.1"
typing-extensions = "^4.8.0"
wikipedia = "^1.4.0"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
mypy = "^1.6.1"
ruff = "^0.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
target-version = ['py311']

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
disallow_untyped_defs = false
disallow_import_untyped = false
ignore_missing_imports = true

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
line-length = 120

[tool.ruff.lint]
# ignore = ["F403"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.isort]
known-third-party = []